making both places input box work.. also did a z-index fix where one box hides another

--- a/src/css/custom/main.css
+++ b/src/css/custom/main.css
@@ -24,3 +24,7 @@ body {
     background: rgba(0,0,0,0.5);
     border: 0px;
 }
+
+#PlacesAutocomplete__autocomplete-container {
+    z-index: 99999 !important;
+}
